--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ backports.zoneinfo==0.2.1
 certifi==2022.6.15
 charset-normalizer==2.1.1
 dill==0.3.5.1
+dj-database-url==1.0.0
 Django==4.1
 django-filter==22.1
+django-on-heroku==1.1.2
 django-shortcuts==1.6
 idna==3.3
 isort==5.10.1
@@ -14,6 +16,7 @@ mccabe==0.7.0
 numpy==1.23.2
 pandas==1.4.3
 platformdirs==2.5.2
+psycopg2-binary==2.9.3
 pylint==2.15.0
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
@@ -26,4 +29,5 @@ tomli==2.0.1
 tomlkit==0.11.4
 typing-extensions==4.3.0
 urllib3==1.26.12
+whitenoise==6.2.0
 wrapt==1.14.1
